# mikexcohen_statistics_book

./: .gitignore  SETUP.md  main.py  pyproject.toml
python/: stats_ch05_simulating_data.ipynb
